Adding borrowing feature and handling testing files
